deploy/apps/backend/admin-api/overlays/development/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-api
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: admin-api-container
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
            requests:
              memory: "16Mi"
              cpu: "10m"
