deploy/apps/backend/admin-api/overlays/development/ingress-traefik-patch.yaml
# deploy/apps/backend/admin-api/overlays/development/ingress-traefik-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-api-ingress
  namespace: inkspace-backend
spec:
  rules:
    - host: dev.admin.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-api
                port:
                  number: 80
